[package]
name = "chatgpt-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.27"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.25.0", features = ["full"] }
