[package]
name = "libopenai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
bytes = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
docfg = "0.1.0"
dotenv = "0.15.0"
elor = { version = "1.1.4", features = ["async"] }
futures = "0.3.27"
image = { version = "0.24.5" }
pin-project-lite = "0.2.9"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.155", features = ["derive", "rc"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.7"
